--- a/Bitcoin blockchain miner prediction.ipynb
+++ b/Bitcoin blockchain miner prediction.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = 'C:/Users/sixte/Jupyter/Bitcoin blockchain/bitcoin-blockchain-285011-b6e5db9e7384.json'"
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = 'XXXX'"
    ]
   },
   {
