--- a/bitcoin_miner_prediction.ipynb
+++ b/bitcoin_miner_prediction.ipynb
@@ -61,8 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = 'C:/Users/sixte/Jupyter/Bitcoin miner prediction/bitcoin-blockchain-285011-b6e5db9e7384.json'\n",
-    "# os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = '<bigquery-project>.json'"
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = '<bigquery-project>.json'"
    ]
   },
   {
